fix scrollbar color

--- a/css/style.css
+++ b/css/style.css
@@ -48,11 +48,12 @@ textarea:focus {
 }
 
 ::-webkit-scrollbar-track {
-	box-shadow: inset 0 0 5px grey; 
+	box-shadow: inset 0 0 5px var(--primary);
+	background-color: var(--primary);
 	border-radius: 5px;
 }
 
 ::-webkit-scrollbar-thumb {
-	background: var(--accent); 
+	background-color: var(--accent);
 	border-radius: 10px;
 }
